[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bt468-rtk-driver"
version = "0.1.0"
description = "User-space BT-468 RTK GNSS serial reader and NMEA parser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
]

[project.scripts]
bt468-rtk = "bt468_rtk_driver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

